# nebula-con

./: .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  ALTERNATIVE_SOLUTION.md  BIGQUERY_ML_DIAGNOSIS_REPORT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  EXECUTION_GUIDE.md  LICENSE  Makefile  NebulaCon_SOP_v3.0.md  README.md  baseline_model_training.py  check_connection.py  check_dataset.py  check_model_existence.py  check_tables.py  create_connection.sql  create_connection_correct.py  create_remote_model.sql  dev.ps1  diagnose_models.py  diagnose_models_fixed.py  execute_bq_query.py  execute_bq_query_fixed.py  external_embedding_solution.py  final_ml_test.py  fix_project_id_format.py  get-pip.py  hackathon_results.json  hackathon_roadmap.md  pseudo_embedding_solution.py  pyproject.toml  pyproject.toml.backup  requirements.txt  run_hackathon.py  step1_create_connection.sql  step2_verify_connection.sql  (+16 more)
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge-enhanced.yml  ci.yml  clean-pipeline.yml  deploy.yml  metrics-ci.yaml  minimal-pipeline.yml  nightly_drift.yml  pr-auto-merge.yml  pr-automation.yml  simple-ci.yml  ultra-minimal.yml
axes/: __init__.py  axes_registry.json  feature_builder.py
config/: axis_thresholds.json  metrics_profile_default.json
data/: axes_metrics.json  baseline_run.json  chunk_metadata.json  dataset_profile.json  extended_processed_chunks.json  extended_sample_questions.csv  extended_vectors.npy  pipeline_config.json  pipeline_v2_config.json  processed_chunks.json  sample_questions.csv  vectors.npy
docs/: 48HOUR_MISSION_DASHBOARD.md  GCP_PERMISSION_URGENT.md  REPRO_TIER0.md  THRESHOLDS.md  axes_spec.md
metrics/: .gitkeep
metrics/core/: __init__.py  drift.py  shape.py
mkm-lab-workspace-config/: .gitignore  README.md
mkm-lab-workspace-config/data/: forces.json  glossary.json  imbalance_patterns.json  manifestation_modes.json  naming_conventions.json  personas.json
mkm-lab-workspace-config/docs/: # MKM-12 통합 이론 v3 Draft – 20250811.md  MKM-12_통합이론_v3_정리본.md  MKM_12CHETZIL_THEORY_ENHANCEMENT_v1.0.md  MKM_12PERSONA_CARD_SYSTEM_RULES_v1.0.md  MKM_DESIGN_SYSTEM.md  MKM_DESIGN_SYSTEM_V2.md  MKM_THEORETICAL_FRAMEWORK_v1.0_FINAL.md  tagging_guidelines.md
mkm-lab-workspace-config/utils/: mkm_data_loader.py
nebula-con/: .dockerignore  .gitignore  Dockerfile  README.md  bigquery_ml_rag_results_final.json  bigquery_ml_rag_results_simple.json  check_bigquery_ml_api.py  check_bigquery_ml_support.py  check_env.py  check_existing_connections.py  check_gcp_api_status.py  deep_diagnosis.py  dev-requirements.txt  diagnose_bigquery_environment_fixed.py  differentiation_strategy.md  docker-compose.yml  docker-run.bat  docker-run.sh  emergency_action_plan.md  fix_remote_model.py  fix_vertex_ai_models.sql  gcp_diagnostic_report.json  grok_solution_summary.md  kaggle_hackathon_writeup.md  performance_optimization_strategy.md  rag_pipeline_bigquery_ml_final.py  rag_pipeline_bigquery_ml_simple.py  rag_pipeline_final.py  rag_pipeline_final_results.json  rag_pipeline_fixed.py  rag_pipeline_location_fixed_results.json  rag_pipeline_ml_embedding_results.json  rag_pipeline_perfect.py  rag_pipeline_vector_search.py  rag_pipeline_vertex_ai_fixed_results.json  rag_pipeline_vertex_ai_sdk.py  rag_pipeline_with_ml_embedding.py  setup_vector_search.sql  simple_rag_working.py  simple_rag_working_results.json  (+3 more)
nebula-con/.devcontainer/: devcontainer.json
nebula-con/.github/: ATHENA_MASTER_PROMPT_v2025.8.15.md
nebula-con/axes/: feature_builder.py
nebula-con/data/: baseline_run.json  bigquery_ml_rag_results_fixed.json  extended_chunk_metadata.json  performance_metrics.json  phase2_performance_metrics.json  word_vectors.json
nebula-con/docs/: README.md  bigquery_vertex_ai_issue_analysis.md  cost_management_strategy.md  create_embeddings.sql  credit_application_form.md  credit_application_status.md  demo_video_scenario.md  metrics_schema.md
nebula-con/internal_docs/: CPGP_Principles.md  MKM-12_Framework_Overview.md
nebula-con/pipelines/: dataset_ingest.py  rag_pipeline_bigquery_ml_fixed.py  rag_pipeline_corrected.py  rag_pipeline_fixed_vertex_ai.py  rag_pipeline_keyword_based.py  (+8 more)
nebula-env/: pyvenv.cfg
nebula_con_kaggle/: rag_pipeline_correct_location.py
pipelines/: dataset_ingest.py
scripts/: aggregate_all_metrics.py  ai_db_agent.py  assert_thresholds.py  automated_generate_embeddings.py  axes_metrics.py  check_kaggle_dataset.py  check_remote_model_status.py  create_bigquery_connection.py  create_remote_model.sql  create_remote_model_auto.py  create_remote_model_detailed.py  create_remote_model_fixed.py  data_deletion_script.py  data_pipeline_v1.py  data_pipeline_v2.py  generate_embeddings_alternative.py  generate_hacker_news_embeddings.py  generate_kaggle_embeddings.py  generate_kaggle_embeddings_fixed.py  generate_shakespeare_embeddings.py  generate_shifted_dataset.py  generate_test_embeddings.py  kpi_daily_job.py  pr_automation.py  rag_pipeline.py  repo_sanity.sh  run_axes_metrics.py  run_baseline_rf.py  run_retention.py  simple_test.py  test_bigquery_ai_basic.py  test_bigquery_ml_official.py  test_ml_generate_embedding.py  test_ml_generate_embedding_final.py  test_ml_generate_embedding_fixed.py  test_multiple_embeddings.py  validate_metrics_schema.py  visualize_hackernews.py
sql/: .gitkeep
tests/: __init__.py  test_basic.py  test_density.py  test_dip.py  test_feature_builder.py  test_psi.py  test_retention.py  test_schema_validation.py  test_subtype_registry.py  test_thresholds.py
utils/: __init__.py  density.py  dip.py  psi.py
(+122 files in other folders)
