[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebula-axes"
version = "0.2.1"
description = "NebulaCon Data Quality Metrics & Axes Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MKM Lab", email = "mkmlab@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=0.900",
    "pydantic>=2.6.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
]

[project.scripts]
nebula-axes-run = "nebula_axes.cli.run_axes:main"
nebula-retention-run = "nebula_axes.cli.run_retention:main"
nebula-metrics-full = "nebula_axes.cli.run_full:main"

[project.urls]
Homepage = "https://github.com/mkmlab-v2/nebula-con"
Repository = "https://github.com/mkmlab-v2/nebula-con"
Documentation = "https://github.com/mkmlab-v2/nebula-con/docs"
Issues = "https://github.com/mkmlab-v2/nebula-con/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nebula_axes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PIE", "T20", "Q", "RSE", "RET", "SLF", "SLOT", "TCH", "TID", "TCH", "ARG", "PIE", "T20", "Q", "RSE", "RET", "SLF", "SLOT", "TCH", "TID"]
ignore = ["E501", "W503", "E203"] 